@@ -143,88 +143,13 @@ int KSI_isHashAlgorithmSupported(KSI_HashAlgorithm algo_id) {
 }
 
 
-void KSI_DataHasher_free(KSI_DataHasher *hasher) {
+static void ksi_DataHasher_cleanup(KSI_DataHasher *hasher) {
 	if (hasher != NULL) {
 		CRYPTO_HASH_CTX_free((CRYPTO_HASH_CTX*)hasher->hashContext);
-		KSI_free(hasher);
 	}
 }
 
-
-int KSI_DataHasher_open(KSI_CTX *ctx, KSI_HashAlgorithm algo_id, KSI_DataHasher **hasher) {
-	int res = KSI_UNKNOWN_ERROR;
-	KSI_DataHasher *tmp_hasher = NULL;
-	CRYPTO_HASH_CTX *tmp_cryptoCTX = NULL;
-	HCRYPTPROV tmp_CSP = 0;
-
-	KSI_ERR_clearErrors(ctx);
-	if (ctx == NULL || hasher == NULL){
-		res = KSI_INVALID_ARGUMENT;
-		goto cleanup;
-	}
-
-	/* Test if the hash algorithm is valid. */
-	if (!KSI_isHashAlgorithmSupported(algo_id)) {
-		KSI_pushError(ctx, res = KSI_UNAVAILABLE_HASH_ALGORITHM, NULL);
-		goto cleanup;
-	}
-
-	/* Create new abstract data hasher object. */
-	tmp_hasher = KSI_new(KSI_DataHasher);
-	if (tmp_hasher == NULL) {
-		KSI_pushError(ctx, res = KSI_OUT_OF_MEMORY, NULL);
-		goto cleanup;
-	}
-
-	tmp_hasher->hashContext = NULL;
-	tmp_hasher->ctx = ctx;
-	tmp_hasher->algorithm = algo_id;
-	tmp_hasher->closeExisting = closeExisting;
-
-	/* Create new helper context for crypto api. */
-	res = CRYPTO_HASH_CTX_new(&tmp_cryptoCTX);
-	if (res != KSI_OK) {
-		KSI_pushError(ctx, res, NULL);
-		goto cleanup;
-	}
-
-	/* Create new crypto service provider (CSP). */
-	if (!CryptAcquireContext(&tmp_CSP, NULL, NULL, PROV_RSA_AES, CRYPT_VERIFYCONTEXT)){
-		char errm[1024];
-		KSI_snprintf(errm, sizeof(errm), "Wincrypt Error (%d)", GetLastError());
-		KSI_pushError(ctx, res = KSI_CRYPTO_FAILURE, errm);
-		goto cleanup;
-	}
-
-	/* Set CSP in helper struct. */
-	tmp_cryptoCTX->pt_CSP = tmp_CSP;
-
-	/* Set helper struct in abstract struct. */
-	tmp_hasher->hashContext = tmp_cryptoCTX;
-
-	res = KSI_DataHasher_reset(tmp_hasher);
-	if (res != KSI_OK) {
-		KSI_pushError(ctx, res, NULL);
-		goto cleanup;
-	}
-
-	*hasher = tmp_hasher;
-	tmp_hasher = NULL;
-	tmp_cryptoCTX = NULL;
-	tmp_CSP = 0;
-
-	res = KSI_OK;
-
-cleanup:
-
-	KSI_DataHasher_free(tmp_hasher);
-	if (tmp_CSP) CryptReleaseContext(tmp_CSP, 0);
-	CRYPTO_HASH_CTX_free(tmp_cryptoCTX);
-
-	return res;
-}
-
-int KSI_DataHasher_reset(KSI_DataHasher *hasher) {
+static int ksi_DataHasher_reset(KSI_DataHasher *hasher) {
 	int res = KSI_UNKNOWN_ERROR;
 	ALG_ID msHashAlg = 0;
 
@@ -272,7 +197,6 @@ int KSI_DataHasher_reset(KSI_DataHasher *hasher) {
 	pCryptoCTX->pt_hHash = pTmp_hash;
 	pTmp_hash = 0;
 
-
 	res = KSI_OK;
 
 cleanup:
@@ -282,7 +206,7 @@ cleanup:
 	return res;
 }
 
-int KSI_DataHasher_add(KSI_DataHasher *hasher, const void *data, size_t data_length) {
+static int ksi_DataHasher_add(KSI_DataHasher *hasher, const void *data, size_t data_length) {
 	int res = KSI_UNKNOWN_ERROR;
 	KSI_CTX *ctx = NULL;
 
@@ -298,7 +222,6 @@ int KSI_DataHasher_add(KSI_DataHasher *hasher, const void *data, size_t data_len
 	}
 	ctx = hasher->ctx;
 	KSI_ERR_clearErrors(ctx);
-
 
 	pCryptoCTX = (CRYPTO_HASH_CTX*)hasher->hashContext;
 	pHash = pCryptoCTX->pt_hHash;
@@ -318,6 +241,83 @@ int KSI_DataHasher_add(KSI_DataHasher *hasher, const void *data, size_t data_len
 	res = KSI_OK;
 
 cleanup:
+
+	return res;
+}
+
+int KSI_DataHasher_open(KSI_CTX *ctx, KSI_HashAlgorithm algo_id, KSI_DataHasher **hasher) {
+	int res = KSI_UNKNOWN_ERROR;
+	KSI_DataHasher *tmp_hasher = NULL;
+	CRYPTO_HASH_CTX *tmp_cryptoCTX = NULL;
+	HCRYPTPROV tmp_CSP = 0;
+
+	KSI_ERR_clearErrors(ctx);
+	if (ctx == NULL || hasher == NULL){
+		res = KSI_INVALID_ARGUMENT;
+		goto cleanup;
+	}
+
+	/* Test if the hash algorithm is valid. */
+	if (!KSI_isHashAlgorithmSupported(algo_id)) {
+		KSI_pushError(ctx, res = KSI_UNAVAILABLE_HASH_ALGORITHM, NULL);
+		goto cleanup;
+	}
+
+	/* Create new abstract data hasher object. */
+	tmp_hasher = KSI_new(KSI_DataHasher);
+	if (tmp_hasher == NULL) {
+		KSI_pushError(ctx, res = KSI_OUT_OF_MEMORY, NULL);
+		goto cleanup;
+	}
+
+	tmp_hasher->hashContext = NULL;
+	tmp_hasher->ctx = ctx;
+	tmp_hasher->algorithm = algo_id;
+	tmp_hasher->closeExisting = closeExisting;
+	tmp_hasher->isOpen = false;
+	tmp_hasher->reset = ksi_DataHasher_reset;
+	tmp_hasher->add = ksi_DataHasher_add;
+	tmp_hasher->cleanup = ksi_DataHasher_cleanup;
+
+	/* Create new helper context for crypto api. */
+	res = CRYPTO_HASH_CTX_new(&tmp_cryptoCTX);
+	if (res != KSI_OK) {
+		KSI_pushError(ctx, res, NULL);
+		goto cleanup;
+	}
+
+	/* Create new crypto service provider (CSP). */
+	if (!CryptAcquireContext(&tmp_CSP, NULL, NULL, PROV_RSA_AES, CRYPT_VERIFYCONTEXT)){
+		char errm[1024];
+		KSI_snprintf(errm, sizeof(errm), "Wincrypt Error (%d)", GetLastError());
+		KSI_pushError(ctx, res = KSI_CRYPTO_FAILURE, errm);
+		goto cleanup;
+	}
+
+	/* Set CSP in helper struct. */
+	tmp_cryptoCTX->pt_CSP = tmp_CSP;
+
+	/* Set helper struct in abstract struct. */
+	tmp_hasher->hashContext = tmp_cryptoCTX;
+
+	res = KSI_DataHasher_reset(tmp_hasher);
+	if (res != KSI_OK) {
+		KSI_pushError(ctx, res, NULL);
+		goto cleanup;
+	}
+
+	*hasher = tmp_hasher;
+	tmp_hasher = NULL;
+	tmp_cryptoCTX = NULL;
+	tmp_CSP = 0;
+
+	res = KSI_OK;
+
+cleanup:
+
+	KSI_DataHasher_free(tmp_hasher);
+	if (tmp_CSP) CryptReleaseContext(tmp_CSP, 0);
+	CRYPTO_HASH_CTX_free(tmp_cryptoCTX);
 
 	return res;
 }
