@@ -1,3 +1,6 @@
+* BUGFIX: Removed double close of the KSI_DataHasher when calculating the calendar hash chain.
+* IMPROVEMENT: Added double close guards and tests for KSI_DataHasher
+
 Version 3.16
 
 2017-10-12 release(3.16.2475)
